@@ -60,6 +60,7 @@ MINI_OP(OP_LABEL,	"label")
 MINI_OP(OP_CHECK_ARRAY_TYPE,	"check_array_type")
 MINI_OP(OP_ARRAY_RANK,	"array_rank")
 MINI_OP(OP_THROW_OR_NULL,	"throw_or_null")
+MINI_OP(OP_RETHROW,	"op_rethrow")
 MINI_OP(OP_REFANYTYPE,	"refanytype")
 MINI_OP(OP_NEWOBJ, "op_newobj")
 
